[metadata]
name = ppf-constants
version = 0.5
authors = Simon Zeller, Adrian Schlatter
license = BSD2
license_files = LICENSE
description = physical constants and units
readme = docs/README_pypi.md
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Utilities
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Operating System :: OS Independent
keywords = python, constants, units
url = https://github.com/adrianschlatter/ppf.constants/tree/master

[options]
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src

[options.extras_require]
# List additional groups of dependencies here. You can install these using
# pip install -e .[dev,test]
test =
    flake8
    check-manifest
    pytest
    coverage
dev =
    tox
    twine

[flake8]
per-file-ignores =
    # imported but unused, import *, undefined name:
    __init__.py: F401, F403, F821
filename =
    */src/*.py
    */docs/*.py
    */tests/*.py
    setup.py

[check-manifest]
ignore =
    tox.ini
    tests
    tests/**
    docs/**
